# prism

./: BENCHMARKS.md  README.md  pyproject.toml
app/: main.py
model_store/: linear_regression.onnx  linear_regression.pkl
runtime/: model_loaders.py
runtime/adapters/: base.py  onnx_adapters.py  scikitlearn_adapters.py
scripts/: benchmark_models.py
tests/: test_predict_endpoint.py
