[project]
name = "prism"
version = "0.1.0"
description = "Predictive Runtime and Inference Server Module"
authors = [
    {name = "Aaryan Kumar Sinha",email = "sinhaaaryankumar@outlook.com"}
]
license = {text = "MIT"}
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard] (>=0.129.0,<0.130.0)",
    "onnx (>=1.20.1,<2.0.0)",
    "numpy (>=2.4.2,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)"
]

[dependency-groups]
dev = [
    "black (>=26.1.0,<27.0.0)",
    "ruff (>=0.15.1,<0.16.0)",
    "pytest (>=9.0.2,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
